[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOverloading"
version = "0.0.1"
description = "A Simple pure python library to emulate type overloading"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Anton Appel", email = "appelanton5@gmail.com"}
]
keywords = ["overloading", "type", "function", "polymorphism"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/wartonbega/pyOverloading#README.md"
Issues = "https://github.com/wartonbega/pyOverloading/issues"
Source = "https://github.com/wartonbega/pyOverloading"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}